--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,8 @@
+body{
+    direction: rtl;
+    font-family: 'Heebo', sans-serif;
+}
+
 .thumbnail img {
     width: 100%;
 }
@@ -13,3 +18,14 @@
 #delete-form {
     display: inline;
 }
+.form-group{
+	width: 60%;
+}
+
+#comment-box{
+	height: 50px;
+}
+
+/*#margined{
+	mat
+}*/
