--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,9 +1,22 @@
 <% include partials/header %>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+   
 
-<h1>Landing Page!</h1>
+  <h3 class="mb-0">לזכרו של</h3>
+  <h1 class="mt-0 display-4">חיים טוקצ׳ינסקי</h1>
+<a title="By DHS21 [CC BY-SA 4.0 
+ (https://creativecommons.org/licenses/by-sa/4.0
+)], from Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Haimt_in_London_2018.jpg"><img  alt="Haimt in London 2018" class="img-fluid rounded" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Haimt_in_London_2018.jpg/512px-Haimt_in_London_2018.jpg"></a>
+  <hr class="my-4">
+  <p>מוזמנים להעלות זכרונות מחיים- תמונות או ציורים, סרטונים, קטעי מוסיקה וסיפורים.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">לשיתוף זכרונות</a>
 
-<p>Welcome to YelpCamp</p>
+  </p>
 
-<a href="/campgrounds">View All Campgrounds</a>
+
+</div>
+</div>
 
 <% include partials/footer %>
