drop commenting for about section for now, try setting up commenting for stories, hit bug, probably with mongoose

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -63,8 +63,8 @@
 
 	</div>
 
-	//comments section
-	 <div class="well">
+	
+	 <!-- <div class="well">
                 <div class="text-right">
                     <a class="btn btn-success" href="/about/newcomment">Add New Comment</a>
                 </div>
@@ -86,5 +86,5 @@
             </div>
         </div>
 
-</div>
+</div> -->
 <% include ./partials/footer %> 
