change storycomments back to comments.js

--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -18,7 +18,7 @@
                     
                 </div>
             </div>
-            <div class="well">
+            <!-- <div class="well"> -->
                 
                     <a class="btn btn-success" href="/stories/<%= story._id %>/comments/new">הוסף תגובה</a>
               
@@ -42,6 +42,6 @@
             </div>
         </div>
     </div>
-</div>
+
 
 <% include ../partials/footer %>
