--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -26,15 +26,15 @@
                 <div>
                 <p> here go the comments </p>
                 <% story.comments.forEach(function(comment){ %>
-                    <!-- <div class="row">
-                        <div class="col-md-12"> -->
+                     <div class="row">
+                        <div class="col-md-12">
                             <strong><%= comment.author%></strong>
                             <span class="float-right">נובמבר 26, 2018 בשעה 5:49</span>
                             <p>
                                 <%= comment.text%> 
                             </p>
                             <hr>
-                    
+                        </div>
                       
                     </div>
                 <% }) %>
