create memory model, change story and comment routing

--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -21,7 +21,7 @@
            <div class="thumbnail">
            <img src="<%= story.image %>" >
            </div>
-           <p class="card-text"> <%= story.storyText %></p>
+           <p class="card-text"> <%= story.content %></p>
            <a href="/stories/<%= story._id %>" class="btn btn-primary">לקריאה</a>
       
         </div>
