--- a/views/stories/new.ejs
+++ b/views/stories/new.ejs
@@ -11,7 +11,7 @@
                     <input class="form-control" type="text" name="image" placeholder="קישור לתמונה (לא חובה)">
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" rows="12" type="text" name="storyText" placeholder="הטקסט שלך"></textarea>
+                    <textarea class="form-control" rows="12" type="text" name="content" placeholder="הטקסט שלך"></textarea>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">שלח</button>
