--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -14,6 +14,7 @@
     <div class="row text-center">
     <% stories.forEach(function(story){ %>
       <div class="col-md-3 col-sm-6">
+        <h4> here is one story</h4>
 
       <div class="card mt-3">
          <small class="card-header">מאת: <%= story.author %></small>
