change styling for stories index and show pages, about page (and edit text). Timestamp using mongoose and momentjs for comments

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,29 +1,55 @@
-body{
-    direction: rtl;
-    font-family: 'Heebo', sans-serif;
+body {
+  direction: rtl;
+  font-family: "Heebo", sans-serif;
 }
 
 .thumbnail img {
-    width: 100%;
+  width: 100%;
 }
 
 .thumbnail {
-    padding: 0;
+  padding: 0;
 }
 
 .thumbnail .caption-full {
-    padding: 9px;
+  padding: 9px;
 }
 
 #delete-form {
-    display: inline;
-}
-.form-group{
-	width: 60%;
+  display: inline;
 }
 
-#comment-box{
-	height: 50px;
+.form-group {
+  width: 60%;
+}
+
+#comment-box {
+  height: 50px;
+}
+
+.img {
+  position: relative;
+  float: bottom;
+  width: 100px;
+  height: 100px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+ object-fit: scale-down;
+
+}
+
+.card{
+  width: 18rem;
+  height: 18rem; 
+}
+
+.smaller{
+ 
+ max-width: 500px;
+ max-height: 500px;
+ object-fit: contain;
+
 }
 
 /*#margined{
