--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,108 +1,100 @@
 <% include ./partials/header %> 
 <div class="container">
-	<div class="mt-4">
-		<p>חיים טוקצ'ינסקי (באנגלית: Haim Tukachinsky) (י"ח חשוון התשמ"ח, 10 בנובמבר 1987 - ט"ו בתשרי תשע"ט, 24 בספטמבר 2018) היה פסנתרן, מלחין, מנצח ומנהל מוזיקאי ממוצא חרדי אשכנזי.
+        
+     <div class="mt-4">
+      <h1 class="display-3">חיים טוקצ׳ינסקי</h1>
+      <p class="lead">י"ח חשוון התשמ"ח, 10 בנובמבר 1987 - ט"ו בתשרי תשע"ט, 24 בספטמבר 2018</p>
+     
+ <hr>
 
-		</p>
-
-		<p>
-			חיים נולד בחיפה. את ילדותו העביר בקרית מוצקין. חיים זכה לחינוך חרדי: למד במוסדות של חב"ד בתלמוד תורה, לאחר מכן - בישיבה קטנה בקריות.
-
-			במקביל למד בקונסרבטוריון קריית מוצקין.
-
-			לאחר ישיבה קטנה עשה בחינות בגרות (אקסטרני) והתקבל לאקדמיה למוזיקה בירושלים.
-		</p>
-
-		<p>
-			בוגר אקדמיה למוזיקה ולמחול בירושלים עם התמחות בפסנתר, הלחנה וניצוח.
-
-			מוריו היו המלחין ד"ר מיכאל וולפה בקומפוזיציה ופרופ' יצחק כ"ץ ופרופ' ואדים מונוסטירסקי בפסנתר.
-
-		</p>
-
-
-		<p>
-			מגיל 16 החל חיים לעבוד כנגן עצמאי, הוא היה ידוע בכך שלצד קריירה כפסנתרן סולו, ליווה זמרים וחזנים, לימד נגינה בקונסרבטוריון, שימש כמנצח, ליווה כיתות אמן שונות והפיק וניהל את הצד המוסיקלי של מגוון הפקות ומחזות זמר שונים.
-
-			זכה פרס קרן התרבות אמריקה-ישראל (AICM) לשנים 2007-2009.
-
-			זכה למלגת קרן וולף.
-
-			בקיץ 2008 השתתף בפסטיבל הפסנתר באוקספורד.
-
-			בשנת 2010 זכה במקום שני בתחרות הפסנתר ה-11 על שם קרלו טוואסאני, כמו גם בתחרות למוזיקה קאמרית על שם רוז חורון.
-
-			הלחין יצירות רבות לזמרים, לכלי נגינה שונים ולצוותים מוזיקליים שונים.
-
-			חלק מיצירותיו בוצעו בידי אנסמבלים ישראלים מרכזיים כמו הסימפונייטה הישראלית באר שבע.
-
-			ניגן ברחבי כל הארץ.
-
-			ערך סבב הופעות כסולן באנגליה ובנורווגיה.
-
-			ניגן ביצירות רבות לצדם של אמנים יידועי שם מרחבי העולם.
-
-			הופיע כסולן ומלווה ומנגן מוזיקה קאמרית בקונצרטים ברחבי הארץ.
-
-			כנגן פסנתר הוא ליווה והפיק מגוון הפקות בימתיות מקומיות, בין היתר עם Association of Americans and Canadians in Israel (AACI) ועם הילל באוניברסיטה העברית
-
-		</p>
-
-
-
-		<p>
-			מאז סיום לימודיו התגורר בירושלים ובה חיי ופעל. חיים סיים את חיו בתאונת פגע וברח שהתרחשה בערב חג הסוכות 2018 .
-
-			הוא הובא למנוחות יום לאחר צאת החג בבית הקברות בהר הזיתים.
-
-			הלווייתו בלטה בכמות האנשים הרבים מכלל הקבוצות בחברה הישראלית שבאו לנכוח ולחלוק לו כבוד אחרון כפסנתרן וכאדם.
-
-			סרטי וידאו נבחרים
-
-		</p>
-
-	
- <h1>הוסף תגובה</h1>
-       
-            <form action="about/comments" method="POST">
-
-                <div class="form-group">
-                    <input class="form-control" type="text" name="comment[author]" placeholder="השם שלך">
-                </div>
-
-               
-               <div class="form-group">
-                    <textarea class="form-control" rows="12" type="text" name="comment[text]" placeholder="התגובה שלך"></textarea>
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">שלח</button>
-                </div>
-            </form>
-            <a href="/about">Go Back</a>
-        </div>
-	
-<!-- 
-                <div class="text-right">
-                    <a class="btn btn-success" href="/about/comments/new">Add New Comment</a>
-                </div> -->
-                <hr>
-              
-                <% comments.forEach(function(comment){ %>
-                
-                  
-                             <strong><%= comment.author %></strong>
-                            <span class="float-right">10 days ago</span>
-                            <p>
-                              <%= comment.text %>
-							</p>
-							<hr>
-
-              
-               <% }); %>
-            </div>
-        </div>
-
-	</div>
+ <div class="mt-4">
+		 
+חיים נולד בחיפה ואת ילדותו העביר בקרית מוצקין. הוא למד במוסדות של חב"ד בתלמוד תורה, ולאחר מכן בישיבה קטנה בקריות. במקביל, למד בקונסרבטוריון קריית מוצקין. <p>
+חיים החל לעבוד כנגן עצמאי מגיל 16. לאחר לימודים בישיבה קטנה עשה בחינות בגרות (אקסטרנית) והתקבל לאקדמיה למוזיקה ולמחול בירושלים.
+ </p>
+ <p>הוא בוגר האקדמיה עם התמחות בפסנתר, הלחנה וניצוח. מוריו היו המלחין ד"ר מיכאל וולפה בקומפוזיציה ופרופ' יצחק כ"ץ ופרופ' ואדים מונוסטירסקי בפסנתר.
+	</p>
+	<p>
+הוא זכה במלגת קרן התרבות אמריקה-ישראל (AICF) לשנים 2007–2009 ובמלגת קרן וולף.
+בקיץ 2008 השתתף בפסטיבל הפסנתר באוקספורד ובשנת 2010 זכה במקום שני בתחרות הפסנתר ה-11 על שם קרלו טוואסאניי. בשנה זו זכה גם במקום השני בתחרות למוזיקה קאמרית על שם רוז חורון.
+</p>
+<p>
+חיים היה ידוע כסולן בפסנתר וניגן בסיבובי הופעות בנורבגיה ואנגליה, לצד קונצרטים קבועים ברחבי הארץ. הוא גם הופיע כנגן קאמרי לצד אמנים ידועים.
+</p>
+<p>
+חיים הלחין יצירות רבות לזמרים, לכלי נגינה שונים ולצוותים מוזיקליים שונים. חלק מיצירותיו בוצעו בידי אנסמבלים ישראלים מרכזיים כמו הסימפונייטה הישראלית באר שבע.
+</p>
+<p>
+<figure class="figure mt-4">
+  <img src="https://images.unsplash.com/photo-1524611307160-4da150fc8cd3?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="figure-img img-fluid rounded" alt="חיים על יד הפסנתר">
+  <figcaption class="figure-caption">חיים על יד הפסנתר</figcaption>
+</figure>
+</p>
+בנוסף, הוא ליווה זמרים וחזנים, לימד נגינה בקונסרבטוריון, שימש כמנצח, ליווה כיתות אמן שונות והפיק וניהל מוסיקלית פרויקטים שונים, בעיקר מחזות זמר ל Association of Americans and Canadians in Israel (AACI) וארגון הלל באוניברסיטה העברית.
+</p>
+<p>
+ בין מחזות הזמר שניהל והפיק מוסיקלית:
+ <ul>
+	 <li> First Date</li>
+     <li>Next to Normal</li>
+     <li>Ordinary Days</li>
+     <li>Singin' in the Rain</li>
+	 <li>Merrily We Roll Along</li>
+	 <li> Seussical</li>
+<li>פיטר פן</li>
+<li>המפיקים</li>
+<li>צלילי המוזיקה</li>
+<li>אתה איש טוב צ'ארלי בראון</li>
+<li>סינדרלה</li>
+<li>כנר על הגג</li>
+</ul>
+<p>
+ב2018 הפיק את המחזמר זוכה הפרסים Soul Doctor,  שמבוסס על חייו של הרב קרליבך. ההפקה האחרונה שחיים התחיל בחייו ולא הספיק לסיים, הייתה של המחזמר האהוב עליו, ״קברט״. הוא יזם את ההפקה והיה אחראי להבאתה ארצה.
+ </p>
+ <p>
+חיים נהרג בתאונת פגע וברח שהתרחשה בערב חג הסוכות 2018. הוא הובא למנוחות בבית הקברות בהר הזיתים. הלווייתו בלטה באנשים הרבים מכלל הקבוצות בחברה הישראלית שבאו לנכוח ולחלוק לו כבוד אחרון כאדם וכמוסיקאי.
+</p>
 </div>
+
+<% /* %>	
+ <h1>הוסף תגובה</h1>
+     
+             <form action="about/comments" method="POST">
+                 <div class="form-group">
+                     <input class="form-control" type="text" name="comment[author]" placeholder="השם שלך">
+                 </div>
+             
+                <div class="form-group">
+                     <textarea class="form-control" rows="12" type="text" name="comment[text]" placeholder="התגובה שלך"></textarea>
+                 </div>
+                 <div class="form-group">
+                     <button class="btn btn-lg btn-primary btn-block">שלח</button>
+                 </div>
+             </form>
+             <a href="/about">Go Back</a>
+       </div>
+
+             <div class="text-right">
+                   <a class="btn btn-success" href="/about/comments/new">Add New Comment</a>
+ 				 <hr>
+             </div> 
+       
+            <% comments.forEach(function(comment){ %>
+          
+            
+                          <strong><%= comment.author %></strong>
+                         <span class="float-right">10 days ago</span>
+                         <p>
+                           <%= comment.text %>
+ 						</p>
+ 						<hr> 
+        
+         <% });%>
+     
+         </div>
+    </div>  
+<% */ %>
+	</div>
+
 
 <% include ./partials/footer %> 
