--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -10,31 +10,44 @@
         </p>
       </div>
     </header>
+   
 
-    <div class="row text-center">
+    <div class="row justify-content-center">
+        <!-- <div class="card-deck"> -->
     <% stories.forEach(function(story){ %>
-      <div class="col-md-3 col-sm-6">
-        <h4> here is one story</h4>
-
+          <div class="col-auto mb-3">
+       
+ 
       <div class="card mt-3">
          <small class="card-header">מאת: <%= story.author %></small>
            <div class="card-body">
-           <div class="thumbnail">
-           <img src="<%= story.image %>" >
-           </div>
-           <p class="card-text"> <%= story.content %></p>
+             <% if(story.image.length > 0){ %>
+              <img class ="img" src="<%= story.image %>" >
+    
+              <p class="card-text"> <%= story.content.substring(0,40) %> <% if(story.content.length >= 40){ %>
+                ...
+               <%}%></p>
+           <% } %>
+           <% if(story.image.length <= 0){ %>
+           <p class="card-text"> <%= story.content.substring(0,40) %> <% if(story.content.length 
+           >= 40){ %>
+             ...
+            <%}%></p>
+           <% } %>
+         
            <a href="/stories/<%= story._id %>" class="btn btn-primary">לקריאה</a>
       
+     
+          </div>
         </div>
-      </div>
-   
-  
-  
+     <!-- </div> -->
+</div>
     
-    </div>
-
+     
   <% }); %>
- </div>
+
+</div>
+
 </div>
 
 <% include ../partials/footer %>
