--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -2,21 +2,25 @@
 
 
 <div class="container">
-    <div class="row">
+    
        
        
-        <div class="col-md-9">
-            <div class="thumbnail">
-                <img class="img-responsive" src="<%= story.image %>">
-                <div class="caption-full">
-        
+       
+            <div class="mt-4">
+          
+                <img class="smaller" src="<%= story.image %>">
+                </div>
+                
+                <div class="caption-full"> 
+            
+               
               
-                    <p><%= story.storyText %></p>
-                    <p>
+                    <p class='my-4'><%= story.content %></p>
+                    <p class='mb-4'>
                         <em>מאת: <%= story.author %></em>
                     </p>
                     
-                </div>
+                
             </div>
             <!-- <div class="well"> -->
                 
@@ -24,12 +28,13 @@
               
                 <hr>
                 <div>
-                <p> here go the comments </p>
+              
                 <% story.comments.forEach(function(comment){ %>
                      <div class="row">
                         <div class="col-md-12">
                             <strong><%= comment.author%></strong>
-                            <span class="float-right">נובמבר 26, 2018 בשעה 5:49</span>
+                            
+                                <span class="float-right"> <%= moment(comment.createdAt).locale("he").fromNow(); %> </span>
                             <p>
                                 <%= comment.text%> 
                             </p>
@@ -40,7 +45,7 @@
                 <% }) %>
                 </div>
             </div>
-        </div>
+        
     </div>
 
 
