add image upload functionality

--- a/views/stories/new.ejs
+++ b/views/stories/new.ejs
@@ -1,14 +1,16 @@
 <% include ../partials/header %>
 <div class="container mt-4">
     
-        <h1>כאן המקום לספר על חיים</h1>
+    <h1></h1>
      
-            <form action="/stories" method="POST">
+            <form action="/stories" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <input class="form-control" type="text" name="author" placeholder="השם שלך">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="image" placeholder="קישור לתמונה (לא חובה)">
+                <label for="image">תמונה(לא חובה)</label>
+                <input class="form-control" type="file" id="image" name="image" placeholder="קישור לתמונה (לא חובה)" accept="image/*">
+
                 </div>
                 <div class="form-group">
                     <textarea class="form-control" rows="12" type="text" name="content" placeholder="הטקסט שלך"></textarea>
