--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,81 @@
 <% include partials/header %>
-<div class="jumbotron jumbotron-fluid">
+<div id="haim-image">
+   <div class="container">
+      <h3>לזכרו של</h3>
+      <h1 class="mt-0 display-4">חיים טוקצ׳ינסקי</h1>
+   </div>
+</div>
+
+<div class="video-wrapper">
+  <div class="container-fluid">
+      <div class="row">
+
+         <div class="col-2">
+            <span class="white-text">
+              סרטון על חיים
+            </span>
+          </div>
+          <div class="col-7"></div>
+          <div class="col-3">
+          <span class="all-videos">
+          לכל הסרטונים
+            <i class="fas fa-caret-left"></i>
+          </span>
+      
+        </div>
+          <div class="container">
+           <div class="row">
+               <div class="col-12 pr-4">
+                   <div class="embed-responsive embed-responsive-16by9">
+                       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9pdmpkqrsPI"></iframe>
+                   </div>
+               </div>
+           </div>
+   
+           
+
+   
+  
+            
+        </div>
+      </div>
+    </div>
+    </div>
+ 
+
+          
+<div class="memory">
+  <div class="memory-share">
+    <div class="container">
+     <h2>זוכרים את חיים</h2>
+      <p class="lead">
+      האתר הזה הוקם במטרה לאסוף כמה שיותר זכרונות מחיים, <span class="res-text"> <br/> ולרכז אותם בצורה מסודרת באתר אחד.</span>
+    
+ <br />
+      מוזמנים להעלות זכרונות מחיים- תמונות או ציורים, סרטונים, קטעי מוסיקה וסיפורים.
+</p>
+      <br>
+      
+       
+
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">לשיתוף זכרונות</button>
+    <div class="dropdown-menu dropdown-menu-right">
+      <a class="dropdown-item" href="#">סיפורים</a>
+      <div role="separator" class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">תמונות וציורים</a>
+      <div role="separator" class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">סרטונים</a>
+      
+    </div>
+      
+
+  </div>
+ </div>
+</div>
+
+<% include partials/footer %>
+
+<!--  <div class="jumbotron jumbotron-fluid">
     <div class="container">
    
 
@@ -17,6 +93,4 @@
 
 
 </div>
-</div>
-
-<% include partials/footer %>
+</div>  -->
