--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,14 @@
 body {
   direction: rtl;
   font-family: "Heebo", sans-serif;
+  padding-top: 60px;
+ 
 }
+#content{
+min-height: calc(100vh - 95px); 
+}
+
+
 
 .thumbnail img {
   width: 100%;
@@ -38,6 +45,18 @@ body {
  object-fit: scale-down;
 
 }
+#image{
+
+  position: relative;
+  float: bottom;
+  width: 200px;
+  height: 200px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+ object-fit: scale-down;
+
+}
 
 .card{
   width: 18rem;
@@ -48,10 +67,160 @@ body {
  
  max-width: 500px;
  max-height: 500px;
- object-fit: contain;
+ object-fit: scale-down;
 
 }
 
+.bigger{
+ 
+  max-width: 800px;
+  max-height: 800px;
+  object-fit: scale-down;
+ 
+ }
+ #haim-image{
+   
+   width: 100%;
+   height: 715px;
+   background-image: url("https://cdn.isnet.co.il/dyncontent/2018/10/14/1b7bf985-e3b2-46d2-8cf9-1defbddd5369.png");
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   color: white;
+   text-align: center; 
+   padding: 70px 0;
+   /* padding-right: 800px; */
+   /* padding-top: 40px; */
+   
+   
+ }
+
+
+ @media (min-width: 768px) {
+   #haim-image{
+  padding-right: 500px;
+   }
+      }
+      @media screen and (max-width: 600px){
+        #haim-image{
+          width: 100%;
+          height: 400px;
+          background-size: cover;
+          padding: 100px;
+          text-align: center;
+
+        }
+      }
+.video-wrapper{
+  
+  color: white;
+  margin: 40px 0px;
+  margin-bottom: 40px;
+  background-image:  linear-gradient(to right, white 80%, rgb(28, 68, 71) 20%)
+}
+@media screen and (max-width: 600px){
+  .video-wrapper{
+    background-image:  linear-gradient(to right, white 60%, rgb(28, 68, 71) 40%);
+    font-size: 0.8rem;
+  }
+}
+
+.white-text{
+  font-size: 200%;
+}
+
+.all-videos{
+  color: brown;
+  font-size: 120%;
+  
+}
+
+
+
+.memory-share{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("https://media.reshet.tv/image/upload/v1537877118/1031258_ragzwv.jpg") ;
+  height: 500px;
+  padding-top: 200px;
+
+} 
+@media (min-width: 768px) { 
+  
+ }
+
+@media screen and (min-width: 1000px){
+  .memory-share{
+  height: 600px;
+
+    padding-top: 100px;
+  }
+  
+
+}
+
+
+
+
+#lab_social_icon_footer {
+  padding: 40px 0;
+  background-color: #dedede;
+  bottom: 0;
+  height: 60px;
+} 
+
+#lab_social_icon_footer a {
+  color: #333;
+}
+
+#lab_social_icon_footer .social:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+#lab_social_icon_footer .social {
+  -webkit-transform: scale(0.8);
+  /* Browser Variations: */
+  
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+}
+/*
+    Multicoloured Hover Variations
+*/
+
+#lab_social_icon_footer #social-fb:hover {
+  color: #3B5998;
+}
+
+#lab_social_icon_footer #social-tw:hover {
+  color: #4099FF;
+}
+
+#lab_social_icon_footer #social-gp:hover {
+  color: #d34836;
+}
+
+#lab_social_icon_footer #social-em:hover {
+  color: #f39c12;
+}
 /*#margined{
 	mat
 }*/
+
+footer{
+  /* padding: 20px 0px 20px 800px; */
+  background-color: #f5f6f7;
+  color:black;
+  position: default;
+  bottom: 0;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top:auto;
+ 
+}
