--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,19 +8,24 @@
         <title>לזכרו של חיים טוקצ׳ינסקי</title>
        <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.0.0/css/bootstrap.min.css" integrity="sha384-P4uhUIGk/q1gaD/NdgkBIl3a6QywJjlsFJFk7SPRdruoGddvRVSwv5qFnvZ73cpz" crossorigin="anonymous">
         <link rel='stylesheet' type='text/css' href='/stylesheets/main.css' />
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Heebo:400,700&amp;subset=hebrew" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     </head>
     <body>
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <div id="content">   
+<nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
   <!-- <a class="navbar-brand" href="#">Navbar</a> -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item active ml-2">
-        <a class="nav-link" href="#">ראשי <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">ראשי <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item ml-2">
         <a class="nav-link" href="/about">על חיים</a>
@@ -30,8 +35,7 @@
       </li>
 
        <li class="nav-item ml-2">
-        <a class="nav-link" href="/music">סרטונים והקלטות</a>
-      </li>
+        <a class="nav-link" href="/sounds">סרטונים</a>
 
       <li class="nav-item ml-2">
         <a class="nav-link" href="/images">תמונות וציורים</a>
@@ -44,7 +48,8 @@
       </li>   
 
     </ul>
+    </div>
   </div>
 </nav>
 
-   
+ 
