--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -26,7 +26,7 @@
 </p>
 <p>
 <figure class="figure mt-4">
-  <img src="https://images.unsplash.com/photo-1524611307160-4da150fc8cd3?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="figure-img img-fluid rounded" alt="חיים על יד הפסנתר">
+  <img src="https://res.cloudinary.com/drvycak8r/image/upload/v1547119009/storage/1.6533720.2531139392.jpg" class="figure-img img-fluid rounded" alt="צילום: אמיל סלמן">
   <figcaption class="figure-caption">חיים על יד הפסנתר</figcaption>
 </figure>
 </p>
