--- a/views/about/newComment.ejs
+++ b/views/about/newComment.ejs
@@ -1,7 +1,10 @@
 <% include ../partials/header %>
 <div class="container mt-4">
- 
-       <h1>הוספת תגובה</h1>
+  <div class="form-row">
+    <div class="col-md-2"></div>
+    
+    <div class="col-md-6">
+       <h1>הוסיפו תגובה</h1>
        
             <form action="/about/comments" method="POST">
 
@@ -19,6 +22,8 @@
             </form>
             <a href="/about">Go Back</a>
         </div>
+    <div class="col-md-2"></div>
+
     </div>
 </div>
 <% include ../partials/footer %>
