--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,6 +3,7 @@
    <div class="container">
       <h3>לזכרו של</h3>
       <h1 class="mt-0 display-4">חיים טוקצ׳ינסקי</h1>
+  
    </div>
 </div>
 
@@ -31,7 +32,6 @@
                    </div>
                </div>
            </div>
-   
            
 
    
@@ -60,11 +60,11 @@
 
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">לשיתוף זכרונות</button>
     <div class="dropdown-menu dropdown-menu-right">
-      <a class="dropdown-item" href="#">סיפורים</a>
+      <a class="dropdown-item" href="/stories">סיפורים</a>
       <div role="separator" class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">תמונות וציורים</a>
+      <a class="dropdown-item" href="/images">תמונות וציורים</a>
       <div role="separator" class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">סרטונים</a>
+      <a class="dropdown-item" href="/sounds">סרטונים</a>
       
     </div>
       
