--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
   <div class="container">
     <ul class="navbar-nav">
-      <li class="nav-item active ml-2">
+      <li class="nav-item ml-2">
         <a class="nav-link" href="/">ראשי <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item ml-2">
@@ -44,8 +44,11 @@
         <a class="nav-link" href="/events">אירועים</a>
       </li>   
        <li class="nav-item ml-2">
-        <a class="nav-link" href="#">מעזבונותיו</a>
+        <a class="nav-link" href="/works">מעזבונותיו</a>
       </li>   
+        <li class="nav-item ml-2">
+        <a class="nav-link" href="/press">כתבות</a>
+      </li>
 
     </ul>
     </div>
