--- a/views/sounds/index.ejs
+++ b/views/sounds/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %> 
 
 <div class="container">
-     <header class="jumbotron">
+     <header class="jumbotron mb-3">
       <div class="container">
         <h1>סרטונים</h1>
         <p class="lead">כאן אפשר לצפות בסרטונים על חיים, ולשמוע קטעי מוסיקה מפרי עטו ו/או בביצועו</p>
