--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,7 +1,10 @@
 <% include ../partials/header %>
 <div class="container mt-4">
- 
-       <h1>הוספת תגובה</h1>
+       <div class="form-row">
+    <div class="col-md-2"></div>
+    
+    <div class="col-md-6">
+       <h1>הוסיפו תגובה</h1>
        
             <form action="/<%= categoryPlural %>/<%= memory._id %>/comments" method="POST">
 
@@ -17,9 +20,12 @@
                     <button class="btn btn-lg btn-primary btn-block">שליחה</button>
                 </div>
             </form>
-            <a href="/about">Go Back</a>
+            <a href="/about">חזרה</a>
         </div>
+    <div class="col-md-2"></div>
+
     </div>
+    
 </div>
 <% include ../partials/footer %>
 
