--- a/views/images/new.ejs
+++ b/views/images/new.ejs
@@ -1,25 +1,34 @@
 <% include ../partials/header %>
 <div class="container mt-4">
     
-    <h1></h1>
-     
+  
+            <div class="form-row">
+    <div class="col-md-2"></div>
+    
+    <div class="col-md-6">
+       <h1>שתפו אותנו בתמונות של חיים</h1>
             <form action="/images" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <input class="form-control" type="text" name="author" placeholder="השם שלך">
                 </div>
                
               
-
+             <% /*
                 <div class="form-group">
-               
+             
                 <div class="custom-file">
                   <input type="file" class="custom-file-input" id="image" name="image" accept="image/*">
                   <label class="custom-file-label" for="image">בחירת קובץ</label>
                 </div>
               </div>
+              */ %>
+            
+             <div class="form-group">
+               <input class="form-control" type='file' name='image' accept="image/*"/>
+             </div>
 
                 <div class="form-group">
-                    <input class="form-control"  type="text" name="content" placeholder="כיתוב לתמונה"></textarea>
+                    <input class="form-control"  type="text" name="content" placeholder="כיתוב לתמונה">
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">שלח</button>
@@ -27,6 +36,10 @@
             </form>
             <a href="/images">חזרה</a>
         </div>
-    
+    <div class="col-md-2"></div>
+
+    </div>
+  </div>
+ </div>
 
 <% include ../partials/footer %>
