--- a/views/images/show.ejs
+++ b/views/images/show.ejs
@@ -1,17 +1,21 @@
 <% include ../partials/header %>
-
-
+ 
 <div class="container">
     
        
+               <div class="back-caret mt-4">
+               <i class="fas fa-caret-right float-left ml-2 mr-1 mt-1"></i>
+
+              <a href="/images">  חזרה לתמונות וציורים</a>
+               </div>
        
-       
-          
-                <div class="caption-full"> 
+               <div class="row">
+               
+                <div class="col-md-8 caption-full mt-4"> 
             
                 <figure class="figure">
-                <p class='mt-4'></p>
-                <img src="<%= image.image %>" class="img-fluid bigger" alt="A generic square placeholder image with rounded corners in a figure.">
+                
+                <img src="<%= image.image %>" class="img-fluid" alt="A generic square placeholder image with rounded corners in a figure.">
                 <figcaption class="figure-caption"><%= image.content %></figcaption>
               </figure>
               
@@ -20,7 +24,7 @@
                         <em>פורסם ע״י <strong><%= image.author %></strong> <%= moment(image.createdAt).locale("he").fromNow(); %> </em>
                     </p>
                     
-                
+                </div>
             </div>
             <!-- <div class="well"> -->
                 
