--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %> 
 
 <div class="container">
-     <header class="jumbotron">
+     <header class="jumbotron mb-3">
       <div class="container">
         <h1>חברים מספרים על חיים</h1>
         <p class="lead">סיפורים וזכרונות מחיים</p>
