--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -4,12 +4,18 @@
 <div class="container">
     
        
+            <div class="back-caret mt-4">
+               <i class="fas fa-caret-right float-left ml-2 mr-1 mt-1"></i>
+
+              <a href="/stories"> חזרה למלים לזכרו</a>
+               </div>
        
-       
-            <div class="mt-4">
+            <div class="row mt-4">
+              <div class="col-sm-6">
           
-                <img class="smaller" src="<%= story.image %>">
-                </div>
+                <img class="img-fluid" src="<%= story.image %>">
+              </div>
+            </div>
                 
                 <div class="caption-full"> 
             
