--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include partials/header%>
 <div id="haim-image">
    <div class="container">
       <h3>לזכרו של</h3>
@@ -58,7 +58,7 @@
       
        
 
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">לשיתוף זכרונות</button>
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">לזכרונות</button>
     <div class="dropdown-menu dropdown-menu-right">
       <a class="dropdown-item" href="/stories">סיפורים</a>
       <div role="separator" class="dropdown-divider"></div>
