--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
         <title>לזכרו של חיים טוקצ׳ינסקי</title>
        <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.0.0/css/bootstrap.min.css" integrity="sha384-P4uhUIGk/q1gaD/NdgkBIl3a6QywJjlsFJFk7SPRdruoGddvRVSwv5qFnvZ73cpz" crossorigin="anonymous">
         <link rel='stylesheet' type='text/css' href='/stylesheets/main.css' />
@@ -15,6 +16,7 @@
 
     </head>
     <body>
+   
   <div id="content">   
 <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
   <!-- <a class="navbar-brand" href="#">Navbar</a> -->
@@ -25,10 +27,14 @@
   <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item ml-2">
-        <a class="nav-link" href="/">ראשי <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">ראשי </a>
       </li>
       <li class="nav-item ml-2">
-        <a class="nav-link" href="/about">על חיים</a>
+      
+      <a class="nav-link" href="/about">על חיים</a>
+      </li>
+
+    
       </li>
       <li class="nav-item ml-2">
         <a class="nav-link" href="/stories">מלים לזכרו</a>
