--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -4,23 +4,30 @@
     <div class="col-md-2"></div>
     
     <div class="col-md-6">
+    <div class="back-caret mb-2">
+               <i class="fas fa-caret-right float-left ml-2 mr-1 mt-1"></i>
+
+           <a href="/<%= categoryPlural %>/<%= memory._id %>">חזרה </a>
+               </div>
        <h1>הוסיפו תגובה</h1>
        
             <form action="/<%= categoryPlural %>/<%= memory._id %>/comments" method="POST">
 
                 <div class="form-group">
-                    <input class="form-control" type="text" name="comment[author]" placeholder="השם שלך">
+                    <label for="comment[author]">השם שלך</label>
+                    <input class="form-control" type="text" name="comment[author]" required>
                 </div>
 
                
                <div class="form-group">
-                    <textarea class="form-control" rows="12" type="text" name="comment[text]" placeholder="התגובה שלך"></textarea>
+                    <label for="comment[text]">התגובה שלך</label>
+                    <textarea class="form-control" rows="12" type="text" name="comment[text]" required></textarea>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">שליחה</button>
                 </div>
             </form>
-            <a href="/about">חזרה</a>
+      
         </div>
     <div class="col-md-2"></div>
 
