--- a/views/sounds/new.ejs
+++ b/views/sounds/new.ejs
@@ -3,31 +3,39 @@
     <div class="form-row">
     <div class="col-md-2"></div>
     
-    <div class="outset col-md-6">
-    <h1>שתפו אותנו בקטעי מוסיקה של חיים</h1>
+    <div class="col-md-6">
+    <div class="back-caret mb-2">
+               <i class="fas fa-caret-right float-left ml-2 mr-1 mt-1"></i>
+
+              <a href="/sounds">חזרה לסרטונים</a>
+               </div>
+    <h1>שתפו אותנו בסרטונים של חיים</h1>
 
      
             <form action="/sounds" method="POST">
+                  
                 <div class="form-group">
-                
-                    <input class="form-control" type="text" name="author" placeholder="השם שלך">
+                    <label for="author">השם שלך</label>
+                    <input class="form-control" type="text" name="author" required>
                 </div>
                
               
 
             <div class="form-group">
-                    <input class="form-control" type="url" name="youlink" placeholder="קישור לסרטון"  aria-describedby="linkHelpBlock">
+                    <label for="youlink">קישור לסרטון</label>
+                    <input class="form-control" type="url" name="youlink"  aria-describedby="linkHelpBlock" required>
                     <small id="linkHelpBlock" class="form-text text-muted"> האתר תומך בסרטוני YouTube בלבד</small>
                 </div>
 
                 <div class="form-group">
-                    <input class="form-control"  type="text" name="content" placeholder="כיתוב לסרטון"></textarea>
+                    <label for="content">כיתוב לסרטון (לא חובה)</label>
+                    <input class="form-control"  type="text" name="content" ></textarea>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">שלח</button>
                 </div>
             </form>
-            <a href="/sounds">חזרה</a>
+         
         </div>
 
         </div>
