--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %> 
+
+<%- include('../partials/header', {active: "about"}); %>
 <div class="container">
         
      <div class="mt-4">
