--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %>
+<%- include('../partials/header', {active: "<%= categoryPlural %>"}); %>
+
 <div class="container mt-4">
        <div class="form-row">
     <div class="col-md-2"></div>
