--- a/views/images/index.ejs
+++ b/views/images/index.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %> 
+<%- include('../partials/header', {active: "images"}); %>
+
 
 <div class="container">
      <header class="jumbotron mb-3">
