--- a/views/images/new.ejs
+++ b/views/images/new.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %>
+<%- include('../partials/header', {active: "images"}); %>
+
 <div class="container mt-4">
     
   
