--- a/views/images/show.ejs
+++ b/views/images/show.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %>
+<%- include('../partials/header', {active: "images"}); %>
+
  
 <div class="container">
     
@@ -6,7 +7,7 @@
                <div class="back-caret mt-4">
                <i class="fas fa-caret-right float-left ml-2 mr-1 mt-1"></i>
 
-              <a href="/images">  חזרה לתמונות וציורים</a>
+              <a href="/images"> חזרה לתמונות וציורים</a>
                </div>
        
                <div class="row">
