--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,5 @@
-<% include partials/header%>
+<%- include('./partials/header', {active: "landing"}); %>
+
 <div id="haim-image">
    <div class="container">
       <h3>לזכרו של</h3>
@@ -73,7 +74,7 @@
  </div>
 </div>
 
-<% include partials/footer %>
+<% include ./partials/footer %>
 
 <!--  <div class="jumbotron jumbotron-fluid">
     <div class="container">
