--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Heebo:400,700&amp;subset=hebrew" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
+<%if(!locals.active){active = null;}%>
     </head>
     <body>
    
@@ -27,33 +27,32 @@
   <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item ml-2">
-        <a class="nav-link" href="/">ראשי </a>
+        <a class="nav-link <%if(active=="landing"){%>active<%}%>" href="/">ראשי </a>
       </li>
       <li class="nav-item ml-2">
-      
-      <a class="nav-link" href="/about">על חיים</a>
+     <a class="nav-link <%if(active=="about"){%>active<%}%>" href="/about">על חיים</a>
       </li>
 
     
       </li>
       <li class="nav-item ml-2">
-        <a class="nav-link" href="/stories">מלים לזכרו</a>
+        <a class="nav-link <%if(active=="stories"){%>active<%}%>" href="/stories">מלים לזכרו</a>
       </li>
 
        <li class="nav-item ml-2">
-        <a class="nav-link" href="/sounds">סרטונים</a>
+        <a class="nav-link <%if(active=="sounds"){%>active<%}%>" href="/sounds">סרטונים</a>
 
       <li class="nav-item ml-2">
-        <a class="nav-link" href="/images">תמונות וציורים</a>
+        <a class="nav-link <%if(active=="images"){%>active<%}%>" href="/images">תמונות וציורים</a>
       </li>
        <li class="nav-item ml-2">
-        <a class="nav-link" href="/events">אירועים</a>
+        <a class="nav-link <%if(active=="events"){%>active<%}%>" href="/events">אירועים</a>
       </li>   
        <li class="nav-item ml-2">
-        <a class="nav-link" href="/works">מעזבונותיו</a>
+        <a class="nav-link <%if(active =="works"){%>active<%}%>" href="/works">מעזבונותיו</a>
       </li>   
         <li class="nav-item ml-2">
-        <a class="nav-link" href="/press">כתבות</a>
+        <a class="nav-link <%if(active=="press"){%>active<%}%>" href="/press">כתבות</a>
       </li>
 
     </ul>
