--- a/views/sounds/index.ejs
+++ b/views/sounds/index.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %> 
+<%- include('../partials/header', {active: "sounds"}); %>
+ 
 
 <div class="container">
      <header class="jumbotron mb-3">
