--- a/views/stories/new.ejs
+++ b/views/stories/new.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %>
+<%- include('../partials/header', {active: "stories"}); %>
+
 <div class="container mt-4">
     <div class="form-row">
     <div class="col-md-2"></div>
